# hire-crew-crew-ai-agent

./: README.md  pyproject.toml
db/3f54d387-12a7-46be-98ed-e2267d3df646/: index_metadata.pickle
src/feature_request_to_pr_automation/: crew.py  main.py  worker.py
src/feature_request_to_pr_automation/config/: agents.yaml  tasks.yaml
src/feature_request_to_pr_automation/tools/: __init__.py  repo_tools.py
