[project]
name = "feature_request_to_pr_automation"
version = "0.1.0"
description = "feature_request_to_pr_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0",
    "supabase>=2.4.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "PyGithub>=2.3.0,<3.0.0"
]

[project.scripts]
feature_request_to_pr_automation = "feature_request_to_pr_automation.main:run"
run_crew = "feature_request_to_pr_automation.main:run"
train = "feature_request_to_pr_automation.main:train"
replay = "feature_request_to_pr_automation.main:replay"
test = "feature_request_to_pr_automation.main:test"
worker = "feature_request_to_pr_automation.worker:run_worker"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
